--- a/src/MVCBlog.Website/Views/Murilo/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Murilo/Index.cshtml
@@ -11,16 +11,16 @@
             <div class="social-icons">
                 <ul>
                     <li>
-                        <a class="fa fa-facebook" href="https://www.facebook.com/rovian.veronez" target="_blank"></a>
+                        <a class="fa fa-facebook" href="https://www.facebook.com/musantana1" target="_blank"></a>
                     </li>
                     <li>
-                        <a class="fa fa-linkedin" href="https://nz.linkedin.com/in/rovianvz" target="_blank"></a>
+                        <a class="fa fa-linkedin" href="https://nz.linkedin.com/in/murilosantana" target="_blank"></a>
                     </li>
                     <li>
-                        <a class="fa fa-github" href="https://github.com/rovianvz" target="_blank"></a>
+                        <a class="fa fa-github" href="https://github.com/musantana1" target="_blank"></a>
                     </li>
                     <li>
-                        <a class="fa fa-envelope" href="mailto:rovian@codingnotes.co.nz"></a>
+                        <a class="fa fa-envelope" href="mailto:murilo@codingnotes.co.nz"></a>
                     </li>
                 </ul>
             </div>
@@ -57,7 +57,7 @@
                             <li>
                                 <div class="info-item">
                                     <i class="fa fa-envelope"></i>
-                                    <span>rovian@codingnotes.co.nz</span>
+                                    <span><a href="mailto:murilo@codingnotes.co.nz">murilo@codingnotes.co.nz</a></span>
                                 </div>
                             </li>
                         </ul>
@@ -72,14 +72,17 @@
                             <li>
                                 <div class="info-item">
                                     <i class="fa fa-phone"></i>
-                                    <span>+64 021 161 3613</span>
+                                    <span>+64 021 0839 5421</span>
                                 </div>
                             </li>
                         </ul>
                         <div class="social-icons small">
                             <ul>
                                 <li>
-                                    <a class="fa fa-facebook" href="#"></a>
+                                    <a class="fa fa-facebook" href="https://www.facebook.com/musantana1"></a>
+                                </li>
+                                <li>
+                                    <a class="fa fa-linkedin" href="https://nz.linkedin.com/in/murilosantana"></a>
                                 </li>
                                 <li>
                                     <a class="fa fa-github" href="#"></a>
@@ -121,7 +124,7 @@
 
                                 <div class="profile-content timeline-content right">
                                     <label>full name</label>
-                                    <div class="value">rovian voelz veronez</div>
+                                    <div class="value">Murilo Alberto Rebelato Santana</div>
                                 </div>
 
                             </div>
@@ -135,8 +138,8 @@
                                 </div>
                                 <div class="profile-content timeline-content left">
                                     <label>email address</label>
-                                    <div class="value">
-                                        rovian@codingnotes.co.nz
+                                    <div class="text-small">
+                                        <span><a href="mailto:murilo@codingnotes.co.nz">murilo@codingnotes.co.nz</a></span>
                                     </div>
                                 </div>
 
@@ -151,7 +154,7 @@
                                 </div>
                                 <div class="profile-content timeline-content right">
                                     <label>birthday</label>
-                                    <div class="value">19/02/1988</div>
+                                    <div class="value">14/12/1990</div>
                                 </div>
 
                             </div>
@@ -166,7 +169,7 @@
 
                                 <div class="profile-content timeline-content left">
                                     <label>Phone</label>
-                                    <div class="value">+64 021 3613</div>
+                                    <div class="value">+64 21 0839 5421</div>
                                 </div>
 
                             </div>
@@ -193,12 +196,12 @@
                         <div class="interests-row medium">
                             <ul>
                                 <li class="wow bounceInDown" data-wow-delay="0.1s">
-                                    <i class="fa fa-code"></i>
-                                    <span>Coding</span>
+                                    <i class="fa fa-plane"></i>
+                                    <span>Travel</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.2s">
-                                    <i class="fa fa-cutlery"></i>
-                                    <span>Foods</span>
+                                    <i class="fa fa-soccer-ball-o"></i>
+                                    <span>Sports</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.3s">
                                     <i class="fa fa-graduation-cap"></i>
@@ -213,20 +216,20 @@
                         <div class="interests-row big">
                             <ul>
                                 <li class="wow bounceInDown" data-wow-delay="0.5s">
-                                    <i class="fa fa-music"></i>
-                                    <span>Music</span>
+                                    <i class="fa fa-code"></i>
+                                    <span>Code</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.6s">
-                                    <i class="fa fa-plane"></i>
-                                    <span>Travel</span>
-                                </li>
-                                <li class="wow bounceInDown" data-wow-delay="0.7s">
                                     <i class="fa fa-book"></i>
                                     <span>Reading</span>
                                 </li>
+                                <li class="wow bounceInDown" data-wow-delay="0.7s">
+                                    <i class="fa fa-pencil"></i>
+                                    <span>Writing</span>
+                                </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.8s">
-                                    <i class="fa fa-coffee"></i>
-                                    <span>Coffee</span>
+                                    <i class="fa fa-music"></i>
+                                    <span>Music</span>
                                 </li>
                             </ul>
                         </div>
@@ -238,11 +241,11 @@
                         <div class="interests-row big">
                             <ul>
                                 <li class="wow bounceInDown" data-wow-delay="0.1s">
-                                    <i class="fa fa-rocket"></i>
-                                    <span>Space</span>
+                                    <i class="fa fa-play-circle"></i>
+                                    <span>Movies</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.2s">
-                                    <i class="fa fa-road"></i>
+                                    <i class="fa fa-paw"></i>
                                     <span>road Trip</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.3s">
@@ -250,8 +253,8 @@
                                     <span>dogs</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.4s">
-                                    <i class="fa fa-paint-brush"></i>
-                                    <span>art</span>
+                                    <i class="fa fa-soccer-ball-o"></i>
+                                    <span>Sports</span>
                                 </li>
                             </ul>
                         </div>
@@ -308,23 +311,20 @@
 
                                 <div class="event-title left">
                                     <h1>software developer</h1>
-                                    <h4>Mobiltec <small>Jan 2012 - Dec 2013</small></h4>
+                                    <h4>Central Station Software <small>Jul 2015 - Present</small></h4>
                                 </div>
 
 
                                 <div class="event-content timeline-content right">
                                     <p>
-                                        Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>.
-                                        Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
-
+                                        Testing
                                     </p>
                                 </div>
 
                             </div>
 
 
-                            <div class="event-item timeline-item">
+                            @*<div class="event-item timeline-item">
 
 
 
@@ -344,7 +344,7 @@
                                     <h4>SEAD/UFRGS <small>Jul 2010 - Jun 2011</small></h4>
                                 </div>
 
-                            </div>
+                            </div>*@
 
 
 
@@ -380,17 +380,21 @@
                             <div class="event-item timeline-item">
 
                                 <div class="event-title left">
-                                    <h1>bachelor of computer science</h1>
-                                    <h4>federal university of rio grande do sul</h4>
+                                    <h1>Certificate: Programming Mobile Applications</h1>
+                                    <h4>University of Maryland, College Park on Coursera</h4>
                                 </div>
 
 
                                 <div class="event-content timeline-content right">
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Vivamus <strong>laoreet</strong> dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
-
+                                        Programming Mobile Applications for Android Handheld Systems: 
+                                        Part 1 by <strong>University of Maryland</strong>, College Park on<strong>Coursera</strong>. Certificate earned on May 10, 2015
+                                        <a href="https://www.coursera.org/account/accomplishments/certificate/SQYZ3AKJYU">
+                                            <span class="text-small">Certificate</span>
+                                        </a>    
+                                    </p>
+                                    <p>
+                                        
                                     </p>
                                 </div>
 
@@ -409,7 +413,7 @@
                                 </div>
                                 <div class="event-title right">
                                     <h1>High School</h1>
-                                    <h4>instituto sinodal da paz</h4>
+                                    <h4>colegio tecnico de limeira</h4>
                                 </div>
 
 
