--- a/src/MVCBlog.Website/Views/Shared/Site.Layout.cshtml
+++ b/src/MVCBlog.Website/Views/Shared/Site.Layout.cshtml
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    @Html.Hidden("RedirectToBlog", Url.Action("Index", "Blog"));
-    @Html.Hidden("RedirectToRovian", Url.Action("Index", "Rovian"));
-    @Html.Hidden("RedirectToMurilo", Url.Action("Index", "Murilo"));
+    @Html.Hidden("RedirectToBlog", Url.Action("Index", "Blog"))
+    @Html.Hidden("RedirectToRovian", Url.Action("Index", "Rovian"))
+    @Html.Hidden("RedirectToMurilo", Url.Action("Index", "Murilo"))
 
     <div id="preloader">
         <div id="status">&nbsp;</div>
