--- a/src/MVCBlog.Website/Views/Administration/Statistics.cshtml
+++ b/src/MVCBlog.Website/Views/Administration/Statistics.cshtml
@@ -5,7 +5,21 @@
     <script type="text/javascript" src="@Links.Scripts.popup_js"></script>
     <script type="text/javascript" src="@Links.Scripts.feedstatisticschart_js"></script>
 }
+@section HeaderTitle {
+    <div class="head-image bg-image" data-bg-image="@Url.Content("~/images/head-image.jpg")">
+        <div class="avatar wow bounceInDown">
+            <img alt="avatar" src="~/images/rovian.png" />
+        </div>
+    </div>
 
+    <div class="big-name">
+        <div class="sticky-paper-head has-shadow ">
+            <div class="content">
+                <h1>Coding Notes</h1>
+            </div>
+        </div>
+    </div>
+}
 <h2>@Common.Blog</h2>
 <table class="table table-bordered table-hover">
     <tr class="active">
