--- a/src/MVCBlog.Website/Views/Blog/Entry.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/Entry.cshtml
@@ -3,34 +3,63 @@
 @{
     Layout = "~/Views/Shared/Sidebar.Layout.cshtml";
 }
+@section HeaderTitle {
+    <div class="head-image bg-image" data-bg-image="@Url.Content("~/images/head-image.jpg")">
+        <div class="avatar wow bounceInDown">
+            <img alt="avatar" src="~/images/rovian.png" />
+        </div>
+    </div>
 
-<article>
-@{Html.RenderPartial(MVC.Blog.Views._BlogEntryHeaderControl, this.Model.BlogEntry);}
-@Html.Raw(this.Model.BlogEntry.ShortContent)
-@if (this.Model.BlogEntry.Content != null)
-{
-    @Html.Raw(this.Model.BlogEntry.Content)
+    <div class="big-name">
+        <div class="sticky-paper-head has-shadow ">
+            <div class="content">
+                <h1>Coding Notes</h1>
+            </div>
+        </div>
+    </div>
 }
+<section class="single-post">
+    <div class="sticky-paper-head has-shadow">
+        <div class="content ">
+            <h1>@this.Model.BlogEntry.Header</h1>
+        </div>
 
-@if (this.Model.BlogEntry.BlogEntryFiles.Count > 0)
-{
-    <h2>@Common.Downloads</h2>
-    <p>
-        @foreach (var file in this.Model.BlogEntry.BlogEntryFiles)
-        {
-            <i class="glyphicon glyphicon-download"></i> @Html.ActionLink(file.Name + "." + file.Extension, MVC.Blog.Download(file.Id))
-            if (this.Request.IsAuthenticated)
-            {
-                <text>- @Common.Downloads: </text>@file.Counter
-            }
-            <br />
-        }
-    </p>
-}
-</article>
+    </div>
+    <div class="sticky-paper-body has-shadow ">
+        <div class="content">
+
+            <div class="single-post">
+                @{Html.RenderPartial(MVC.Blog.Views._BlogEntryHeaderControl, this.Model.BlogEntry);}
+
+                <div class="content">
+                    @if (this.Model.BlogEntry.Content != null)
+                    {
+                        @Html.Raw(this.Model.BlogEntry.Content)
+                    }
+                    @if (this.Model.BlogEntry.BlogEntryFiles.Count > 0)
+                    {
+                        <h2>@Common.Downloads</h2>
+                        <p>
+                            @foreach (var file in this.Model.BlogEntry.BlogEntryFiles)
+                            {
+                                <i class="glyphicon glyphicon-download"></i> @Html.ActionLink(file.Name + "." + file.Extension, MVC.Blog.Download(file.Id))
+                                if (this.Request.IsAuthenticated)
+                                {
+                                    <text>- @Common.Downloads: </text>@file.Counter
+                                }
+                                <br />
+                            }
+                        </p>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<hr class="le-hre">
 
 @{Html.RenderPartial(MVC.Blog.Views._MetaInformationControl, this.Model);}
 
-@{Html.RenderPartial(MVC.Blog.Views._CommentsControl, this.Model);}
+@*@{Html.RenderPartial(MVC.Blog.Views._CommentsControl, this.Model);}
 
-@{Html.RenderPartial(MVC.Blog.Views._PingbacksControl, this.Model);}
+@{Html.RenderPartial(MVC.Blog.Views._PingbacksControl, this.Model);}*@
