--- a/src/MVCBlog.Website/Views/Blog/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/Index.cshtml
@@ -40,7 +40,7 @@
 
     <section id="blog" class="big-name">
         <div class="row">
-
+            <!-- MAIN CONTENT-->
             <div class="col-lg-8">
                 <div class="sticky-paper-head has-shadow ">
                     <div class="content">
@@ -88,6 +88,8 @@
                     </div>
                 </div>
             </div>
+
+            <!--SIDE BAR-->
             <div class="col-lg-4 ">
                 <section>
                     <div class="sticky-paper-head has-shadow">
