--- a/src/MVCBlog.Website/Views/Blog/_PagingControl.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/_PagingControl.cshtml
@@ -13,10 +13,10 @@
         nextPage = this.Model.CurrentPage.Value + 1;
     }
     
-    <div>
+    <div style="text-align: center">
         @if (this.Model.CurrentPage.HasValue && this.Model.CurrentPage.Value > 1)
         {                                     
-            @Html.ActionLink(Common.PreviousPage, MVC.Blog.Index(this.Model.Tag, this.Model.Search, this.Model.CurrentPage.Value - 1), new { rel = "prev" });
+            @Html.ActionLink(Common.PreviousPage, MVC.Blog.Index(this.Model.Tag, this.Model.Search, this.Model.CurrentPage.Value - 1), new { rel = "prev", @class = "le-btn" });
 
             if (nextPage != -1)
             {
@@ -26,7 +26,7 @@
 
         @if (nextPage != -1)
         {
-            @Html.ActionLink(Common.NextPage, MVC.Blog.Index(this.Model.Tag, this.Model.Search, nextPage), new { rel = "next" });
+            @Html.ActionLink(Common.NextPage, MVC.Blog.Index(this.Model.Tag, this.Model.Search, nextPage), new { rel = "next", @class="le-btn" });
         }
     </div>
 }
