--- a/src/MVCBlog.Website/Views/Murilo/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Murilo/Index.cshtml
@@ -3,7 +3,7 @@
 
     <div class="head-image bg-image" data-bg-image="@Url.Content("~/images/head-image.jpg")">
         <div class="avatar wow bounceInDown">
-            <img alt="avatar" src="images/rovian.png" />
+            <img alt="avatar" src="~/images/murilo.jpg" />
         </div>
     </div>
     <div class="sticky-paper-head has-shadow">
