--- a/src/MVCBlog.Website/Views/Murilo/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Murilo/Index.cshtml
@@ -1,5 +1,5 @@
-﻿
-@section HeaderTitle {
+﻿@section HeaderTitle {
+    <script src="https://use.fonticons.com/9d5ea0da.js"></script>
 
     <div class="head-image bg-image" data-bg-image="@Url.Content("~/images/head-image.jpg")">
         <div class="avatar wow bounceInDown">
@@ -42,18 +42,23 @@
                 <div class="col-xs-12 col-md-7">
                     <div class="le-paragraph">
                         <p>
-                            <strong>Lorem ipsum dolor sit amet,</strong>
-                            consectetur adipiscing elit. Nullam convallis lobortis commodo. Nulla et lobortis velit. Maecenas aliquam nulla eros, vitae rhoncus erat fermentum ac. Proin iaculis vel nulla et finibus. Suspendisse sed dolor libero. Nunc pellentesque in ipsum sit amet tempus.
+                            Former statistics student who decided to follow my passion in programming.
                         </p>
                         <p>
-
-                            Nullam convallis lobortis commodo. Nulla et <strong>lobortis velit</strong>. Maecenas aliquam nulla eros, vitae rhoncus erat fermentum ac. Proin iaculis vel nulla et finibus. Suspendisse sed dolor libero. Nunc pellentesque in ipsum sit amet tempus.
+                            I have been learning through experiences being able to complete my task and achieve my
+                            goals.
                         </p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-5">
                     <div class="tabled-info-holder">
                         <ul class="info-holder">
+                            <li>
+                                <div class="info-item">
+                                    <i class="icon icon-skype"></i>
+                                    <span>Skype: MuSantana1</span>
+                                </div>
+                            </li>
                             <li>
                                 <div class="info-item">
                                     <i class="fa fa-envelope"></i>
@@ -72,7 +77,7 @@
                             <li>
                                 <div class="info-item">
                                     <i class="fa fa-phone"></i>
-                                    <span>+64 021 0839 5421</span>
+                                    <span>021 0839 5421</span>
                                 </div>
                             </li>
                         </ul>
@@ -87,6 +92,8 @@
                                 <li>
                                     <a class="fa fa-github" href="#"></a>
                                 </li>
+
+
                             </ul>
                         </div>
                     </div>
@@ -200,12 +207,12 @@
                                     <span>Travel</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.2s">
-                                    <i class="fa fa-soccer-ball-o"></i>
-                                    <span>Sports</span>
+                                    <i class="fa fa-wrench"></i>
+                                    <span>Repair</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.3s">
-                                    <i class="fa fa-graduation-cap"></i>
-                                    <span>Science</span>
+                                    <i class="glyphicon glyphicon-headphones"></i>
+                                    <span>Guitar</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.4s">
                                     <i class="fa fa-leaf"></i>
@@ -224,8 +231,8 @@
                                     <span>Reading</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.7s">
-                                    <i class="fa fa-pencil"></i>
-                                    <span>Writing</span>
+                                    <i class="fa fa-soccer-ball-o"></i>
+                                    <span>Sports</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.8s">
                                     <i class="fa fa-music"></i>
@@ -245,16 +252,16 @@
                                     <span>Movies</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.2s">
-                                    <i class="fa fa-paw"></i>
-                                    <span>road Trip</span>
+                                    <i class="fa fa-car"></i>
+                                    <span>cars</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.3s">
                                     <i class="fa fa-paw"></i>
                                     <span>dogs</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.4s">
-                                    <i class="fa fa-soccer-ball-o"></i>
-                                    <span>Sports</span>
+                                    <i class="fa fa-stack-overflow"></i>
+                                    <span>internet</span>
                                 </li>
                             </ul>
                         </div>
@@ -262,20 +269,20 @@
                         <div class="interests-row medium">
                             <ul>
                                 <li class="wow bounceInDown" data-wow-delay="0.5s">
-                                    <i class="fa fa-music"></i>
-                                    <span>Music</span>
+                                    <i class="fa fa-graduation-cap"></i>
+                                    <span>Science</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.6s">
-                                    <i class="fa fa-plane"></i>
-                                    <span>Travel</span>
+                                    <i class="glyphicon glyphicon-cutlery"></i>
+                                    <span>Food</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.7s">
-                                    <i class="fa fa-pencil"></i>
-                                    <span>Writing</span>
+                                    <i class="fa fa-newspaper-o "></i>
+                                    <span>News</span>
                                 </li>
                                 <li class="wow bounceInDown" data-wow-delay="0.8s">
-                                    <i class="fa fa-coffee"></i>
-                                    <span>Coffee</span>
+                                    <i class="fa fa-language"></i>
+                                    <span>Languages</span>
                                 </li>
                             </ul>
                         </div>
@@ -329,22 +336,22 @@
 
 
 
-                                <div class="event-content timeline-content left">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
+                                    <div class="event-content timeline-content left">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
+                                            Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
 
-                                    </p>
+                                        </p>
 
-                                </div>
+                                    </div>
 
-                                <div class="event-title right">
-                                    <h1>software developer scholarship holder</h1>
-                                    <h4>SEAD/UFRGS <small>Jul 2010 - Jun 2011</small></h4>
-                                </div>
+                                    <div class="event-title right">
+                                        <h1>software developer scholarship holder</h1>
+                                        <h4>SEAD/UFRGS <small>Jul 2010 - Jun 2011</small></h4>
+                                    </div>
 
-                            </div>*@
+                                </div>*@
 
 
 
@@ -387,14 +394,14 @@
 
                                 <div class="event-content timeline-content right">
                                     <p>
-                                        Programming Mobile Applications for Android Handheld Systems: 
+                                        Programming Mobile Applications for Android Handheld Systems:
                                         Part 1 by <strong>University of Maryland</strong>, College Park on<strong>Coursera</strong>. Certificate earned on May 10, 2015
                                         <a href="https://www.coursera.org/account/accomplishments/certificate/SQYZ3AKJYU">
                                             <span class="text-small">Certificate</span>
-                                        </a>    
+                                        </a>
                                     </p>
                                     <p>
-                                        
+
                                     </p>
                                 </div>
 
@@ -403,11 +410,11 @@
 
                             <div class="event-item timeline-item">
                                 <div class="event-content timeline-content left">
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
+                                    <br>
 
+                                    <p>
+                                        <i class="glyphicon glyphicon-plus-sign"></i>
+                                        Technical course in Geomatica
                                     </p>
 
                                 </div>
@@ -431,7 +438,7 @@
 
 
 
-<hr class="le-hr">
+@*<hr class="le-hr">
 
 <section id="skills">
     <div class="sticky-paper-head has-shadow ">
@@ -531,4 +538,4 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
