--- a/src/MVCBlog.Website/Views/Administration/EditBlogEntry.cshtml
+++ b/src/MVCBlog.Website/Views/Administration/EditBlogEntry.cshtml
@@ -4,7 +4,7 @@
 @section HeaderTitle {
     <div class="head-image bg-image" data-bg-image="@Url.Content("~/images/head-image.jpg")">
         <div class="avatar wow bounceInDown">
-            <img alt="avatar" src="~/images/rovian.png" />
+            <img alt="avatar" src="~/images/bg.png" />
         </div>
     </div>
 
