--- a/src/MVCBlog.Website/Views/Blog/Entry.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/Entry.cshtml
@@ -56,10 +56,28 @@
         </div>
     </div>
 </section>
-<hr class="le-hre">
+<hr class="le-hre" />
 
 @{Html.RenderPartial(MVC.Blog.Views._MetaInformationControl, this.Model);}
+<hr class="le-hre" />
 
+<section class="single-post">
+    <div class="sticky-paper-body has-shadow ">
+        <div class="content">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- CodingNotesIndex -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-3444447531311884"
+                 data-ad-slot="3848684052"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+
+        </div>
+    </div>
+</section>
 @*@{Html.RenderPartial(MVC.Blog.Views._CommentsControl, this.Model);}
 
 @{Html.RenderPartial(MVC.Blog.Views._PingbacksControl, this.Model);}*@
