--- a/src/MVCBlog.Website/Views/Rovian/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Rovian/Index.cshtml
@@ -87,10 +87,10 @@
                                     <a class="fa fa-github" href="https://github.com/rovianvz" target="_blank"></a>
                                 </li>
                                 <li>
-                                    <a class="fa fa-youtube" href="https://www.youtube.com/user/rovianvz" target="_blank"></a>
+                                    <a class="fa fa-google-plus" href="https://plus.google.com/106496135765234322284/" target="_blank"></a>
                                 </li>
                                 <li>
-                                    <a class="fa fa-google-plus" href="https://plus.google.com/106496135765234322284/" target="_blank"></a>
+                                    <a class="fa fa-twitter" href="https://twitter.com/rovianvz" target="_blank"></a>
                                 </li>
                             </ul>
                         </div>
@@ -300,19 +300,22 @@
                             </div>
                         </div>
                         <div class="timeline-body">
-                            @*<div class="event-item timeline-item">
+                            <div class="event-item timeline-item">
                                 <div class="event-content timeline-content left">
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                        Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                        Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
-                                   </p>
+                                        <ul class="fa-ul">
+                                            <li>
+                                                <i class="fa-li fa fa-caret-right"></i>
+                                                Testing and Learning within a large scale software project using ASP.Net MVC, C#, HTML5/Javascript/CSS and Entity Framework/Microsoft SQL Server.
+                                            </li>
+                                        </ul>
+                                    </p>
                                 </div>
                                 <div class="event-title right">
-                                    <h1>software developer intern</h1>
+                                    <h1>software developer</h1>
                                     <h4>Central Station Software <small>Aug 2015 - Present</small></h4>
                                 </div>
-                            </div>*@
+                            </div>
                             <div class="event-item timeline-item">
                                 <div class="event-item timeline-item">
                                     <div class="event-title left">
